# unipac

./: .gitignore  Cargo.toml  default.nix  devenv.nix  flake.nix  shell.nix  test.sh
crates/bins/cli/: Cargo.toml
crates/bins/cli/src/: main.rs
crates/bins/cli/src/commands/: list.rs
crates/bins/cli/src/utils/: args.rs  dirs.rs  error.rs  mod.rs
crates/bins/cli/src/utils/config/: error.rs  mod.rs
crates/bins/cli/src/utils/plugin/: error.rs  mod.rs
crates/bins/generate-headers/: Cargo.toml
crates/bins/generate-headers/src/: main.rs
crates/libs/shared/: Cargo.toml
crates/libs/shared/src/: lib.rs
crates/libs/shared/src/plugin/: error.rs  mod.rs  plugin.rs  results.rs
crates/plugins/dummy/: Cargo.toml
crates/plugins/dummy/src/: lib.rs
crates/unipac/: Cargo.toml
examples/: config.toml
examples/bash/: plugin.sh
examples/example-plugin/: Cargo.toml
examples/example-plugin-c/: .gitignore  lib.c
examples/example-plugin/src/: lib.rs
examples/test_error/: plugin.sh  with_name.sh
nix/: package.nix
plugins/nix-profile/: nix-profile.sh
plugins/pacman/: pacman.sh
src/: args.rs  config.rs  dirs.rs  main.rs  package.rs  plugin.rs  prelude.rs  spinners.rs
src/commands/: info.rs  install.rs  list_packages.rs  list_updates.rs  mod.rs  remove.rs  search.rs  update.rs
tui/: Cargo.toml
tui/src/: main.rs
unipac/: Cargo.toml
unipac-shared/: unipac-run
